changing json reading